Bug 378593 - Problems copying the names of files with apostrophes
Summary: Problems copying the names of files with apostrophes
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-09 18:21 UTC by Toni Asensi Esteve
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toni Asensi Esteve 2017-04-09 18:21:23 UTC
Hi!

If you are using an embedded terminal, and in the active panel you press Ctrl+Enter when you have a file with an apostrophe, for example:
    d'a.pdf
then in the embedded terminal you get copied
    "d'a.pdf'
but it isn't right, it should be
    "d'a.pdf"
as Krusader 2.4.0-beta3 does.

Thanks for Krusader!
Comment 1 Alex Bikadorov 2017-04-17 15:52:49 UTC
yep
Comment 2 Alex Bikadorov 2017-04-25 20:11:18 UTC
Git commit bede8bbad23d81184b59d7b5510952dd290067c0 by Alexander Bikadorov.
Committed on 25/04/2017 at 20:10.
Pushed by abikadorov into branch 'master'.

Fixed quoting of filenames with apostrophe

Bug came with a474bebd.

FIXED: [ 378593 ] Problems copying the names of files with apostrophes

M  +1    -1    krusader/krservices.cpp

https://commits.kde.org/krusader/bede8bbad23d81184b59d7b5510952dd290067c0
Comment 3 Alex Bikadorov 2017-04-25 20:12:08 UTC
Sorry, was a typo made by me.