Fixed quoting of filenames with apostrophe

Bug came with a474bebd.

FIXED: [ 378593 ] Problems copying the names of files with apostrophes
BUG: 378593